# digi-cow-challenge

./: CLOUD_GUIDE.md  cloud_setup.sh  decision_tree.ipynb  feature_analysis.ipynb  generate_improved_notebook.py  improved_models.ipynb  main.py  patch_notebook.py  patch_notebook_inference.py  pyproject.toml  random_forest.ipynb  rf_train.py  submission.csv  submission_cb.csv  submission_lgb.csv  submission_nn.csv  submission_rf.csv  submission_rwn.csv  submission_tfidf_engineered.csv  submission_tfidf_lemmatized_predicted.csv  submission_tfidf_no_svd.csv  test_parsing.py  train.py
Original Data/: .~lock.Prior.csv#  .~lock.SampleSubmission.csv#  .~lock.Test.csv#  .~lock.Train.csv#  .~lock.dataset_data_dictionary.csv#
catboost_info/: catboost_training.json  learn_error.tsv  test_error.tsv  time_left.tsv
catboost_info/learn/: events.out.tfevents
catboost_info/test/: events.out.tfevents
