[project]
name = "digicow-farmer-training-adoption-challenge"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "catboost>=1.2.8",
    "category-encoders>=2.6.0",
    "gensim>=4.3.0",
    "imbalanced-learn>=0.12.0",
    "lightgbm>=4.6.0",
    "matplotlib>=3.9.0",
    "nltk>=3.9.2",
    "numpy==2.3.0",
    "pandas<3.0",
    "pypdf>=6.7.0",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "torch>=2.10.0",
    "umap-learn>=0.5.11",
    "xgboost>=3.1.3",
]
